# treadmilltracker

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: alembic.ini  main.py  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 015e5315bd4f_.py  52f7ec01c8ae_.py  545a4e02bb0c_.py  6ae48025abc4_.py  873077fa01cf_.py  8c03a116491d_.py  dcc39f3243bc_.py
backend/app/api/: main.py
backend/app/api/auth/: routes.py
backend/app/api/runs/: models.py  repository.py  routes.py
backend/app/api/user/: models.py
backend/app/core/: authentication.py  config.py  database.py  database_manager.py  models.py  repository.py
backend/app/core/settings/: development_settings.py  settings.py
backend/app/middleware/: CSRFMiddleware.py
backend/app/scripts/: import_runs.py  main.py
backend/app/scripts/database/: __init__.py  backport_db.py  backup_db.py
frontend/: .eslintignore  .eslintrc.json  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: AddEditRunModal.vue  FilterHistoryModal.vue  Footer.vue  Header.vue  HeaderNavigation.vue  PersonalBests.vue  RunChart.vue  RunHeatmap.vue  RunHistory.vue  RunLog.vue  SiteFooter.vue  SiteHeader.vue  ViewDeleteRunModal.vue
frontend/src/composables/: LoadingState.ts
frontend/src/helper/: helper.ts
frontend/src/models/: Model.ts  PersonalBestsModel.ts  RunModel.ts  RunsModel.ts  UserModel.ts
frontend/src/router/: index.ts
(+12 files in other folders)
