[project]
name = "treadmilltracker-zz50-co-uk"
version = "0.1.0"
description = ""
authors = [
    {name = "David Exelby"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "sqlmodel (>=0.0.25,<0.0.26)",
    "pydantic[email] (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "psycopg (>=3.2.10,<4.0.0)",
    "fastapi-utils (>=0.8.0,<0.9.0)",
    "typing-inspect (>=0.9.0,<0.10.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
